--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="container">
     <h1>My Links</h1>
     <ul>
-    <li><a href="https://www.tiktok.com/@vascorre">Tiktok - running content</a></li>
+    <li><a href="https://www.tiktok.com/@vascorre?_t=ZG-8zr5aI1otAO&_r=1">Tiktok - running content</a></li>
     <li><a href="https://www.youtube.com/@ramoniv4298">YouTube - short movies</a></li>
     <li><a href="https://soundcloud.com/ramon-iv">SoundCloud - beats</a></li>
     <li><a href="https://www.instagram.com/vasco_cardoso_lll/">Instagram</a></li>
