Update index.html - update instagram description 2

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <li><a href="https://www.tiktok.com/@vascorre?_t=ZG-8zr5aI1otAO&_r=1">Tiktok - running content</a></li>
     <li><a href="https://www.youtube.com/@ramoniv4298">YouTube - short movies</a></li>
     <li><a href="https://soundcloud.com/ramon-iv">SoundCloud - beats</a></li>
-    <li><a href="https://www.instagram.com/vasco_cardoso_lll/">Instagram - me and art</a></li>
+    <li><a href="https://www.instagram.com/vasco_cardoso_lll/">Instagram - art & me</a></li>
     <li><a href="https://thegapinmyteeth.github.io/Mycelium/">Mycelium, the game</a></li>
     </ul>
   </div>
