--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My Links</title>
 
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+
   <!-- Pixel-style font (free from Google Fonts) -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
